<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.create_lead.CreateLeadActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_lead"
                android:textAppearance="@style/Header_title_16_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/ic_refresh"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAppearance="@style/TextStyleNormal12sp"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:outlineProvider="none"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTextStyle"
                app:hintEnabled="false"
                app:startIconTint="#A7A3FF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_main_tasks_board"
                    android:elevation="0dp"
                    android:hint="Ex: Frank"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:outlineProvider="none"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="#616161"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/last_name"
                android:textAppearance="@style/TextStyleNormal12sp"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:outlineProvider="none"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTextStyle"
                app:hintEnabled="false"
                app:startIconTint="#A7A3FF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_main_tasks_board"
                    android:elevation="0dp"
                    android:hint="Ex: Franklin"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:outlineProvider="none"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="#616161"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/phone_number"
                android:textAppearance="@style/TextStyleNormal12sp"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:outlineProvider="none"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTextStyle"
                app:hintEnabled="false"
                app:startIconTint="#A7A3FF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_main_tasks_board"
                    android:elevation="0dp"
                    android:hint="Ex: +998 94 6434777"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:outlineProvider="none"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="#616161"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/language"
                android:textAppearance="@style/TextStyleNormal12sp"
                android:textSize="12sp" />

            <com.example.fortest.ui.custom_view.MaterialSpinnerView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_payment_field"
                android:ellipsize="middle"
                android:gravity="start|center_vertical"
                android:hint="Select"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                android:textSize="16sp"
                app:arrowColor="#616161"
                app:popup_elevation="12dp"
                app:popup_height="wrap_content"
                app:popup_itemPaddingBottom="12dp"
                app:popup_itemPaddingLeft="16dp"
                app:popup_itemPaddingRight="16dp"
                app:popup_itemPaddingTop="12dp"
                app:popup_itemTextColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/lead_intention"
                android:textAppearance="@style/TextStyleNormal12sp"
                android:textSize="12sp" />

            <com.example.fortest.ui.custom_view.MaterialSpinnerView
                android:id="@+id/tv_intention"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_payment_field"
                android:ellipsize="middle"
                android:gravity="start|center_vertical"
                android:hint="Select"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                android:textSize="16sp"
                app:arrowColor="#616161"
                app:popup_elevation="12dp"
                app:popup_height="wrap_content"
                app:popup_itemPaddingBottom="12dp"
                app:popup_itemPaddingLeft="16dp"
                app:popup_itemPaddingRight="16dp"
                app:popup_itemPaddingTop="12dp"
                app:popup_itemTextColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:outlineProvider="none"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:outlineProvider="none"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="#E8A889"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="#E8A889" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:outlineProvider="none"
                app:cardBackgroundColor="#E8A889"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="#E8A889"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp"
                        android:text="@string/save"
                        android:textColor="@color/black" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>